open solution files

--- a/vs2010/vs2010/vs2010.vcxproj
+++ b/vs2010/vs2010/vs2010.vcxproj
@@ -74,7 +74,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\Desktop\oss pro\oss pro\oss pro\condition.c" />
     <ClCompile Include="main.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\Desktop\oss pro\oss pro\oss pro\condition.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
